--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -345,7 +345,7 @@ function MM_swapImage() { //v3.0
   </tr>
   </table>   
 <img src="/static/images/vphysics/certificate.png">
-<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次  <a href='https://www.freepik.com/free-vector/assorted-round-icons_745439.htm' target="_blank">Designed by Freepik</a>
+<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次  <a href="https://www.freepik.com/free-photos-vectors/house">House vector created by Freepik</a><a href="https://www.freepik.com/free-photos-vectors/house">House vector created by Freepik</a><a href='https://www.freepik.com/free-vector/assorted-round-icons_745439.htm' target="_blank">Designed by Freepik</a>
 {% elif subject_id == "C" %}
 <img src="/static/images/euler/euler.png"><BR>
     <a href="/static/files/programming_euler.pdf" target="_blank" role="button" class="btn btn-info">教材簡介</a>
