--- a/templates/base.html
+++ b/templates/base.html
@@ -50,9 +50,22 @@ Licence URI: http://www.os-templates.com/template-terms
               <li><A href="/student/lessons/G">南港高中特色課程：使用Python3</A></li>
             </ul>          
           </li>   
-          <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>  
-          <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">Pandas數據分析：使用Python3</a></li>
-          <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">機器人程式設計：使用Microbit</a></li> 
+          <li><a href="#">Euler(Python)數學解題程式設計</a>
+            <ul>
+              <li><A href="/student/lessons/C">南港高中特色課程：使用Python3</A></li>
+            </ul>     
+          </li> 
+          <li><a href="#">Pandas(Pythom)數據分析程式設計</a>
+            <ul>
+              <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">南港高中校本課程：使用Python3</a></li>
+            </ul>           
+          </li>
+          <li><a href="#">Robot機器人(開放硬體)程式設計</a>
+            <ul>
+              <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">避障車專題製作：使用Microbit</a></li>
+              <li><a href="https://hackmd.io/5EoPrPTMRg2DpTa9vcWSvg" target="_blank">南港高中校本課程：使用Microbit</a></li>
+            </ul>           
+          </li>          
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
         </ul>
       </li>
