--- a/templates/account/author.html
+++ b/templates/account/author.html
@@ -78,9 +78,7 @@
                         <table class="table">
         <tr><td width="300px"><img src="/static/images/about/honor1.png" width="280px"><BR><BR><img src="/static/images/about/honor2.png" width="280px"></td><td>
 		<table class="table">
-      <!--
-  <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類：跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
-      -->
+  <tr><td>臺北市第19屆教育專業創新及行動研究高中組教育專業經驗分享類優選：跨領域課程設計與實施-以物理與資訊為例(107年度)<a href="/static/files/author/VPhysics.pdf" target="_blank">[pdf]</a></td></tr>      
 	<tr><td>臺北市106年度優良教師</td></tr>      
 	<tr><td>指導學生參加臺北市104年度機器人競賽榮獲高中職創意組第1,3名</td></tr>	
 	<tr><td>國家教育研究院102年度全國教師創新教學媒體競賽高中職組佳作：<BR>亂數化演算法模擬軟體</td></tr>
