--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@ Licence URI: http://www.os-templates.com/template-terms
               <li><A href="/student/lessons/C">南港高中特色課程：使用Python3</A></li>
             </ul>     
           </li> 
-          <li><a href="#">Pandas(Pythom)數據分析程式設計</a>
+          <li><a href="#">Pandas(Python)數據分析程式設計</a>
             <ul>
               <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">南港高中校本課程：使用Python3</a></li>
             </ul>           
