--- a/templates/student/lessonG.html
+++ b/templates/student/lessonG.html
@@ -39,7 +39,7 @@
     -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=1 %}
+      {% include "student/submitE.html" with index=1 %}
     </div>
     {% endif %}
   </div>
@@ -71,7 +71,7 @@
     -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=4 %}
+      {% include "student/submitE.html" with index=4 %}
     </div>
     {% endif %}
   </div>
@@ -103,7 +103,7 @@
     -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=5 %}
+      {% include "student/submitE.html" with index=5 %}
     </div>
     {% endif %}
   </div>
@@ -135,7 +135,7 @@
     -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=6 %}
+      {% include "student/submitE.html" with index=6 %}
     </div>
     {% endif %}
   </div>
@@ -167,7 +167,7 @@
     -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=7 %}
+      {% include "student/submitE.html" with index=7 %}
     </div>
     {% endif %}
   </div>
