--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -6,6 +6,8 @@
     {% include "student/submitC.html" %}
 {% elif lesson == "6" %}
     {% include "student/submitD.html" %}
+{% elif lesson == "8" %}
+    {% include "student/submitE.html" %}
 {% elif lesson == "2" or lesson == "3" or lesson == "5" or lesson == "7" %}
     {% include "student/submitB.html" %}
 {% endif %}
