--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -72,7 +72,17 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
   {% else %}
     尚未繳交
   {% endif %}
-
+{% elif lesson == "8" %}
+  {% if work %}
+    {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    <div>心得感想：</div>
+    <div>{{ work.memo }}</div>
+    <div>程式碼：</div>
+    <div>執行結果</div>
+    <div><img src="/{{ work.picture }}" style="max-width: 100%"></div>
+  {% else %}
+    尚未繳交
+  {% endif %}
 {% endif %}
 {% endblock %}
 
