--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -30,7 +30,8 @@
 							  <a href="/teacher/work3/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">檢核作業</a>                
                </p>
               <p style="padding:0px; margin:2px;">
-                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>                
+                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>   
+                <a href="/teacher/forum/{{classroom.id}}" role="button" class="btn btn-success">討論區</a>                          
                 <a href="/survey/pre_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課前問卷</a>
 			  				<a href="/survey/post_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課後問卷</a>
 							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
