--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,8 @@ Licence URI: http://www.os-templates.com/template-terms
           </li> 
           <li><a href="#">Pandas(Python)數據分析程式設計</a>
             <ul>
-              <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">南港高中校本課程：使用Python3</a></li>
+              <li><a href="https://hackmd.io/c/BkigbLiuX/https%3A%2F%2Fhackmd.io%2Fs%2FHyLNgIjd7" target="_blank">南港高中校本課程：使用Python3</a></li>
+              <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">GDP:使用Python3</a></li>
             </ul>           
           </li>
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
