--- a/templates/survey/select.html
+++ b/templates/survey/select.html
@@ -5,5 +5,5 @@
 {% block title %} 課後問卷 {% endblock %}
 {% block content %}
 <a href="/survey/pre_survey{{lesson}}/teacher/{{classroom_id}}" role="btn" class="btn btn-success">課前問卷</a>
-<a href="/survey/post_survey{{lesson}}/teacher/{{classroom_id}}" role="btn" class="btn btn-success">課前問卷</a>
+<a href="/survey/post_survey{{lesson}}/teacher/{{classroom_id}}" role="btn" class="btn btn-success">課後問卷</a>
 {% endblock %}
