--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -37,6 +37,7 @@
 							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>						  
 							  <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-success">成績</a>       
 							  <a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
+  							<a href="/teacher/cert/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">證書</a>		              
               </p>   
               </td>
             </tr>
