--- a/templates/base.html
+++ b/templates/base.html
@@ -61,12 +61,17 @@ Licence URI: http://www.os-templates.com/template-terms
               <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">GDP:使用Python3</a></li>
             </ul>           
           </li>
+          <li><a href="#">APCS(Python)大學先修程式設計</a>
+            <ul>
+              <li><a href="https://hackmd.io/s/HypYLEPtQ" target="_blank">觀念題（整理中）</a></li>
+            </ul>           
+          </li>           
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
             <ul>
               <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">避障車專題製作：使用Microbit</a></li>
               <li><a href="https://hackmd.io/5EoPrPTMRg2DpTa9vcWSvg" target="_blank">南港高中校本課程：使用Microbit</a></li>
             </ul>           
-          </li>          
+          </li>           
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
         </ul>
       </li>
