--- a/templates/student/work_group.html
+++ b/templates/student/work_group.html
@@ -1,30 +1,25 @@
 {% extends "base.html" %}
 {% block title %} Students {% endblock %}
 {% block content %}
-        {{lesson_data.1}}
-        <br>
-        {{lesson_data.2}}
-		<BR>
-<table>
+{% for lesson in lessons %}
+{{lesson.0.1}} : {{lesson.0.2}}<Br>
+<table class="table">
 <tr>
-<td>名稱</td>  
-<td>組員</td>  
 <td>小老師</td>
-</tr>
-        {% for group in student_groups %}
+<td>組員</td>  
+</tr>	
                 <tr>
-                <td>{{group.0.name}}</td>
-				<td>
-				{% for enroll in group.1 %}
-				    ({{enroll.0.seat}}){{enroll.0.student.first_name}}
-					{% if enroll.1 == -2 %}-尚未繳交{% else %}{% if enroll.1 < 0  %}-尚未評分{% else %}-{{enroll.1}}-{{enroll.2}}{% endif %}{% endif %}
+                <td>                  
+				{% for assistant in lesson.1.0.2 %}
+				    ({{assistant.seat}}){{assistant.student.first_name}}
+				{% endfor %}                                
+                </td>
+									<td>               
+				{% for enroll in lesson.1.0.1 %}
+          {% if user.id in lesson.1.0.3 %}<a target=_blank href="/teacher/scoring/{{classroom_id}}/{{enroll.0.student_id}}/{{forloop.parentloop.counter}}">{% endif %}({{enroll.0.seat}}){{enroll.0.student.first_name}}{% if user.id in lesson.1.0.3 %}</a>{% endif %}
+					{% if enroll.1 != -1 %} -{{enroll.1}}-{{enroll.2}}{% else %}-{% if enroll.3 == "" %}<font color=green>尚未繳交</font>{% else %}<font color=red>尚未評分</font>{% endif %}{% endif %}
 				{% endfor %}
 				</td>
-                <td>
-				{% for assistant in group.2 %}
-				    ({{assistant.seat}}){{assistant.student.first_name}}
-				{% endfor %}                                 
-                </td>
-        {% endfor %}
 </table>
+{% endfor %}
 {% endblock %}
