--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -33,7 +33,7 @@
                 <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>   
                 <a href="/teacher/forum/{{classroom.id}}" role="button" class="btn btn-success">討論區</a>                          
                 <a href="/survey/select/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">問卷</a>
-							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
+							  <a href="/teacher/assistant/group/0/{{classroom.id}}/" role="button" class="btn btn-success">小老師</a>
 							  <a href="/teacher/memo/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">心得</a>						  
 							  <a href="/teacher/grade/0/{{classroom.lesson}}/1/{{classroom.id}}" role="button" class="btn btn-success">成績</a>       
 							  <a href="/show/list/{{classroom.id}}" role="button" class="btn btn-success">創意秀</a>
