--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -10,5 +10,7 @@
     {% include "student/submitE.html" %}
 {% elif lesson == "2" or lesson == "3" or lesson == "5" or lesson == "7" %}
     {% include "student/submitB.html" %}
+{% elif lesson == "9" %}
+    {% include "student/submitF.html" %}
 {% endif %}
 {% endblock %}
